hard-gists/3947bdc0f7b0dbcd51fa1ee53974fe66/run.log
=== Docker Run Log for 3947bdc0f7b0dbcd51fa1ee53974fe66 ===
Started at: Mi 29. Okt 14:06:48 CET 2025

[2025-10-29 14:06:49] START: Running container for 3947bdc0f7b0dbcd51fa1ee53974fe66
[2025-10-29 14:06:49] SUCCESS: Container c111b9c513d4189833ecb483205bb80efd7f4ebe63e8fafc9f7df56e5cf50ec8 started for 3947bdc0f7b0dbcd51fa1ee53974fe66
=== Container logs for 3947bdc0f7b0dbcd51fa1ee53974fe66 ===
  File "/snippet.py", line 97
    print 'stock id: ' + stock_id_string + ', year month: ' + str(year) + ' ' + str(month)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3947bdc0f7b0dbcd51fa1ee53974fe66 ===
[2025-10-29 14:06:51] INFO: Container c111b9c513d4189833ecb483205bb80efd7f4ebe63e8fafc9f7df56e5cf50ec8 has stopped
